--- a/src/view/configuration/configuration.html
+++ b/src/view/configuration/configuration.html
@@ -48,6 +48,16 @@
 
       <div class="form-group">
         <label>
+          Collect Tag URL
+          <input id="collectUrl" class="form-control" minlength="0" maxlength="500" pattern="^https:\/\/.*">
+          <small class="text-muted">
+            (Optional) Override the default Tealium Collect tag URL with your own custom first-party data hosted file URL, such as: https://example.co.uk/collect.min.js
+          </small>
+        </label>
+      </div>
+
+      <div class="form-group">
+        <label>
           Endpoint
           <input id="endpoint" class="form-control" minlength="0" maxlength="500" pattern="^https:\/\/.*">
           <small class="text-muted">
