--- a/src/view/configuration/configuration.html
+++ b/src/view/configuration/configuration.html
@@ -61,7 +61,7 @@
           Endpoint
           <input id="endpoint" class="form-control" minlength="0" maxlength="500" pattern="^https:\/\/.*">
           <small class="text-muted">
-            (Optional) Override the default Tealium Collect endpoint with your own custom first-party data collection endpoint, such as: https://collect.example.co.uk/event
+            (Optional) Override the default Tealium Collect event endpoint with your own custom first-party data collection endpoint, such as: https://collect.example.co.uk/event
           </small>
         </label>
       </div>
@@ -92,6 +92,7 @@
       var accountInput = document.querySelector('#account'),
         profileInput = document.querySelector('#profile'),
         dataSourceKeyInput = document.querySelector('#dataSourceKey'),
+        collectUrlInput = document.querySelector('#collectUrl'),
         endpointInput = document.querySelector('#endpoint'),
         dataObjectInputName = document.querySelector('#dataObjectName');
         addEventListenerACDL = document.querySelector('#addEventListenerACDL');
@@ -104,6 +105,7 @@
             accountInput.value = info.settings.account;
             profileInput.value = info.settings.profile;
             dataSourceKeyInput.value = info.settings.dataSourceKey;
+            collectUrlInput.value = (info.settings.collectUrl === undefined) ? "" : info.settings.collectUrl;
             endpointInput.value = info.settings.endpoint;
             dataObjectInputName.value = info.settings.dataObjectName;
             addEventListenerACDL.checked = info.settings.addEventListenerACDL;
@@ -115,6 +117,7 @@
             account: accountInput.value,
             profile: profileInput.value,
             dataSourceKey: dataSourceKeyInput.value,
+            collectUrl: collectUrlInput.value,
             endpoint: endpointInput.value,
             dataObjectName: dataObjectInputName.value,
             addEventListenerACDL: addEventListenerACDL.checked
@@ -125,6 +128,7 @@
           return accountInput.checkValidity() &&
             profileInput.checkValidity() &&
             dataSourceKeyInput.checkValidity() &&
+            collectUrlInput.checkValidity() &&
             endpointInput.checkValidity() &&
             dataObjectInputName.checkValidity() &&
             addEventListenerACDL.checkValidity();
